GNOME Bugzilla – Bug 759137
processor: Passing a non-NULL rectangle to gegl_node_new_processor leads to a WARNING
Last modified: 2016-02-03 12:25:16 UTC
We need to ensure that the graph is prepared before we start processing it. Normally when you pass NULL to gegl_node_new_processor, the gegl_node_get_bounding_box call in gegl_processor_set_rectangle has the side-effect of doing just that. However, if you have passed a non-NULL rectangle during construction, the graph is unprepared and processing it leads to a WARNING from the gegl_node_get_cache call in gegl_processor_render. (The workaround is to create the processor with NULL and use a separate gegl_processor_set_rectangle call to set the rectangle.)
Created attachment 316901 [details] [review] processor: Fix construction with a non-NULL rectangle
I am sufficiently confident about this one, so I am pushing it. Please let me know if it breaks anything.
Comment on attachment 316901 [details] [review] processor: Fix construction with a non-NULL rectangle commit 91b217d4e8f57a1204e5793e3aa66be6fac18299 Author: Debarshi Ray <debarshir@gnome.org> Date: Mon Dec 7 20:29:46 2015 +0100 processor: Fix construction with a non-NULL rectangle Ensure that the graph is prepared whenever a new GeglNode is set. https://bugzilla.gnome.org/show_bug.cgi?id=759137