processor: Fix construction with a non-NULL rectangle

Ensure that the graph is prepared whenever a new GeglNode is set.

https://bugzilla.gnome.org/show_bug.cgi?id=759137